Fix z-index issue with dropdown menu, closes #1052

--- a/datasette/static/app.css
+++ b/datasette/static/app.css
@@ -408,6 +408,7 @@ svg.dropdown-menu-icon {
     font-size: 16px;
     box-shadow: 2px 2px 2px #aaa;
     background-color: #fff;
+    z-index: 1000;
 }
 .dropdown-menu ul,
 .dropdown-menu li {
